--- a/index.html
+++ b/index.html
@@ -590,7 +590,7 @@
         
         <!-- Audio con controlli nativi -->
         <audio controls loop>
-            <source src="audio/SIGLA ITALIANA SAILOR MOON CRYSTAL.mp3" type="audio/mpeg">
+          <source src="musica/sigla-sailor-moon.mp3" type="audio/mpeg">
             Il tuo browser non supporta l'audio.
         </audio>
     </div>
