--- a/index.html
+++ b/index.html
@@ -616,8 +616,8 @@
 
     <!-- Footer -->
     <footer>
-        <p>🌙 Creato con amore per la mia Sailor Senshi preferita 💖</p>
-        <p style="margin-top: 0.5rem;">© 2024 - Sailor Moon Forever ✨</p>
+        <p>🌙 Creato con amore per la mia Sailor  preferita 💖</p>
+        <p style="margin-top: 0.5rem;">© 2026 - Sailor Moon Forever ✨</p>
     </footer>
 
     <!-- Modal -->
