Add character links to character cards in index.html

--- a/index.html
+++ b/index.html
@@ -460,36 +460,54 @@
                     <h3>Sailor Moon</h3>
                     <p><strong>Usagi Tsukino</strong></p>
                     <p>La protagonista, guerriera dell'amore e della giustizia!</p>
+                      <a href="dettaglio-1.html" class="btn-link"
+                            >Scopri il personaggio</a
+                        >
                 </div>
                 <div class="character-card" onclick="showCharacterInfo('Sailor Mercury')">
                     <div class="emoji">💧</div>
                     <h3>Sailor Mercury</h3>
                     <p><strong>Ami Mizuno</strong></p>
                     <p>La guerriera dell'acqua e della saggezza</p>
+                      <a href="dettaglio-2.html" class="btn-link"
+                            >Scopri il personaggio</a
+                        >
                 </div>
                 <div class="character-card" onclick="showCharacterInfo('Sailor Mars')">
                     <div class="emoji">🔥</div>
                     <h3>Sailor Mars</h3>
                     <p><strong>Rei Hino</strong></p>
                     <p>La guerriera del fuoco e della passione</p>
+                      <a href="dettaglio-3.html" class="btn-link"
+                            >Scopri il personaggio</a
+                        >
                 </div>
                 <div class="character-card" onclick="showCharacterInfo('Sailor Jupiter')">
                     <div class="emoji">⚡</div>
                     <h3>Sailor Jupiter</h3>
                     <p><strong>Makoto Kino</strong></p>
                     <p>La guerriera del tuono e del coraggio</p>
+                      <a href="dettaglio-4.html" class="btn-link"
+                            >Scopri il personaggio</a
+                        >
                 </div>
                 <div class="character-card" onclick="showCharacterInfo('Sailor Venus')">
                     <div class="emoji">💛</div>
                     <h3>Sailor Venus</h3>
                     <p><strong>Minako Aino</strong></p>
                     <p>La guerriera dell'amore e della bellezza</p>
+                      <a href="dettaglio-5.html" class="btn-link"
+                            >Scopri il personaggio</a
+                        >
                 </div>
                 <div class="character-card" onclick="showCharacterInfo('Tuxedo Mask')">
                     <div class="emoji">🎩</div>
                     <h3>Tuxedo Mask</h3>
                     <p><strong>Mamoru Chiba</strong></p>
                     <p>Il misterioso cavaliere che protegge Sailor Moon</p>
+                      <a href="dettaglio-6.html" class="btn-link"
+                            >Scopri il personaggio</a
+                        >
                 </div>
             </div>
         </section>
