--- a/dettaglio-1.html
+++ b/dettaglio-1.html
@@ -1,1 +1,517 @@
+<!DOCTYPE html>
+<html lang="it">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>🌙 Sailor Moon - Usagi Tsukino</title>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
 
+        body {
+            font-family: 'Georgia', serif;
+            background: linear-gradient(135deg, #f093fb 0%, #f5576c 100%);
+            background-attachment: fixed;
+            color: #333;
+            overflow-x: hidden;
+            min-height: 100vh;
+        }
+
+        /* Stelle animate nello sfondo */
+        .stars {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            pointer-events: none;
+            z-index: 0;
+        }
+
+        .star {
+            position: absolute;
+            background: white;
+            border-radius: 50%;
+            opacity: 0.6;
+            animation: twinkle 3s infinite;
+        }
+
+        @keyframes twinkle {
+            0%, 100% { 
+                opacity: 0.3;
+                transform: scale(1);
+            }
+            50% { 
+                opacity: 1;
+                transform: scale(1.2);
+            }
+        }
+
+        /* Header fisso */
+        .page-header {
+            background: linear-gradient(135deg, #f093fb 0%, #f5576c 100%);
+            color: white;
+            padding: 1.5rem 0;
+            box-shadow: 0 4px 20px rgba(0,0,0,0.5);
+            position: sticky;
+            top: 0;
+            z-index: 100;
+            border-bottom: 4px solid #ffd700;
+        }
+
+        .header-content {
+            max-width: 1400px;
+            margin: 0 auto;
+            padding: 0 2rem;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+        }
+
+        .back-link {
+            display: inline-flex;
+            align-items: center;
+            gap: 0.5rem;
+            text-decoration: none;
+            color: #ffd700;
+            font-size: 1.1rem;
+            font-weight: bold;
+            padding: 0.8rem 1.5rem;
+            background: rgba(0, 0, 0, 0.3);
+            border-radius: 50px;
+            transition: all 0.3s;
+            border: 2px solid #ffd700;
+        }
+
+        .back-link:hover {
+            background: rgba(255, 255, 255, 0.2);
+            transform: translateX(-5px);
+        }
+
+        .page-title {
+            font-size: 2rem;
+            text-shadow: 2px 2px 4px rgba(0,0,0,0.3);
+            font-family: 'Times New Roman', serif;
+        }
+
+        /* Container principale */
+        .main-container {
+            position: relative;
+            z-index: 1;
+            min-height: calc(100vh - 100px);
+        }
+
+        /* Hero section */
+        .hero-section {
+            background: linear-gradient(to bottom, rgba(255,255,255,0.95), rgba(255,255,255,0.98));
+            padding: 4rem 2rem;
+            text-align: center;
+            border-bottom: 4px solid #ffd700;
+            box-shadow: 0 5px 20px rgba(0,0,0,0.2);
+        }
+
+        .character-emoji {
+            font-size: 8rem;
+            margin-bottom: 1rem;
+            animation: float 3s ease-in-out infinite;
+        }
+
+        @keyframes float {
+            0%, 100% { transform: translateY(0) rotate(0deg); }
+            50% { transform: translateY(-20px) rotate(10deg); }
+        }
+
+        .hero-section h1 {
+            font-family: 'Times New Roman', serif;
+            font-size: 4rem;
+            color: #f093fb;
+            margin-bottom: 0.5rem;
+            text-shadow: 2px 2px 4px rgba(0,0,0,0.1);
+        }
+
+        .character-subtitle {
+            font-size: 2rem;
+            color: #f5576c;
+            font-style: italic;
+            font-weight: bold;
+        }
+
+        /* Content wrapper */
+        .content-wrapper {
+            max-width: 1400px;
+            margin: 0 auto;
+            padding: 3rem 2rem;
+        }
+
+        /* Citazione */
+        .quote-section {
+            background: linear-gradient(135deg, #ffecd2 0%, #fcb69f 100%);
+            padding: 4rem 2rem;
+            text-align: center;
+            margin: 3rem 0;
+            position: relative;
+            box-shadow: inset 0 0 50px rgba(0,0,0,0.1);
+        }
+
+        .quote-section::before {
+            content: '"';
+            font-size: 10rem;
+            color: #f093fb;
+            opacity: 0.2;
+            position: absolute;
+            top: -20px;
+            left: 50%;
+            transform: translateX(-50%);
+            font-family: 'Times New Roman', serif;
+        }
+
+        .quote-text {
+            font-style: italic;
+            font-size: 2rem;
+            color: #333;
+            max-width: 900px;
+            margin: 0 auto;
+            position: relative;
+            z-index: 1;
+        }
+
+        /* Sezioni contenuto */
+        .content-section {
+            background: rgba(255, 255, 255, 0.95);
+            padding: 4rem 2rem;
+            margin: 3rem 0;
+            border-radius: 0;
+            box-shadow: 0 5px 25px rgba(0,0,0,0.2);
+        }
+
+        .content-section:nth-child(even) {
+            background: rgba(245, 245, 245, 0.95);
+        }
+
+        .section-inner {
+            max-width: 1200px;
+            margin: 0 auto;
+        }
+
+        .content-section h2 {
+            color: #f093fb;
+            font-size: 3rem;
+            margin-bottom: 2rem;
+            font-family: 'Times New Roman', serif;
+            text-align: center;
+            position: relative;
+            padding-bottom: 1.5rem;
+        }
+
+        .content-section h2::after {
+            content: '';
+            position: absolute;
+            bottom: 0;
+            left: 50%;
+            transform: translateX(-50%);
+            width: 150px;
+            height: 4px;
+            background: linear-gradient(to right, #f093fb, #f5576c);
+        }
+
+        .content-section p {
+            font-size: 1.3rem;
+            line-height: 2;
+            color: #444;
+            margin-bottom: 1.5rem;
+            text-align: justify;
+        }
+
+        /* Info boxes */
+        .info-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            gap: 2rem;
+            margin: 3rem 0;
+        }
+
+        .info-box {
+            background: linear-gradient(135deg, #ffecd2 0%, #fcb69f 100%);
+            padding: 2rem;
+            border-radius: 15px;
+            border: 3px solid #f093fb;
+            transition: all 0.3s;
+        }
+
+        .info-box:hover {
+            transform: translateY(-10px) scale(1.02);
+            box-shadow: 0 15px 40px rgba(240, 147, 251, 0.4);
+        }
+
+        .info-box h3 {
+            color: #f093fb;
+            margin-bottom: 1rem;
+            font-size: 1.5rem;
+        }
+
+        .info-box p {
+            font-size: 1.1rem;
+            line-height: 1.7;
+            margin: 0;
+            text-align: left;
+        }
+
+        /* Timeline section */
+        .timeline-section {
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            padding: 4rem 2rem;
+            margin: 3rem 0;
+        }
+
+        .timeline-inner {
+            max-width: 1000px;
+            margin: 0 auto;
+        }
+
+        .timeline-section h3 {
+            color: white;
+            font-size: 2.5rem;
+            margin-bottom: 2rem;
+            text-align: center;
+            text-shadow: 2px 2px 4px rgba(0,0,0,0.3);
+        }
+
+        .timeline-section ul {
+            list-style: none;
+            padding-left: 0;
+        }
+
+        .timeline-section li {
+            color: white;
+            padding: 1.2rem 0;
+            padding-left: 3rem;
+            position: relative;
+            font-size: 1.3rem;
+            line-height: 1.8;
+            border-left: 3px solid #ffd700;
+            margin-left: 2rem;
+        }
+
+        .timeline-section li::before {
+            content: '🌙';
+            position: absolute;
+            left: -1.5rem;
+            font-size: 1.5rem;
+            background: rgba(255,255,255,0.2);
+            padding: 0.5rem;
+            border-radius: 50%;
+        }
+
+        /* Simboli decorativi */
+        .decorative-symbols {
+            text-align: center;
+            font-size: 4rem;
+            padding: 3rem 0;
+            opacity: 0.8;
+        }
+
+        /* Footer */
+        footer {
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            color: white;
+            text-align: center;
+            padding: 3rem 2rem;
+            margin-top: 0;
+            border-top: 4px solid #ffd700;
+        }
+
+        footer p {
+            font-size: 1.2rem;
+            margin: 0.5rem 0;
+        }
+
+        /* Responsive */
+        @media (max-width: 768px) {
+            .hero-section h1 { font-size: 2.5rem; }
+            .character-emoji { font-size: 5rem; }
+            .character-subtitle { font-size: 1.3rem; }
+            .content-section h2 { font-size: 2rem; }
+            .content-section p { font-size: 1.1rem; text-align: left; }
+            .quote-text { font-size: 1.3rem; }
+            .page-title { font-size: 1.3rem; }
+            .info-grid { grid-template-columns: 1fr; }
+        }
+    </style>
+</head>
+<body>
+    <!-- Stelle animate -->
+    <div class="stars" id="stars"></div>
+
+    <!-- Header fisso -->
+    <header class="page-header">
+        <div class="header-content">
+            <a href="index.html" class="back-link">
+                <span>← Torna a Sailor Moon</span>
+            </a>
+            <div class="page-title">🌙 Sailor Moon</div>
+        </div>
+    </header>
+
+    <!-- Container principale -->
+    <div class="main-container">
+        
+        <!-- Hero section -->
+        <section class="hero-section">
+            <div class="character-emoji">🌙</div>
+            <h1>Sailor Moon</h1>
+            <p class="character-subtitle">Usagi Tsukino - La Guerriera dell'Amore</p>
+        </section>
+
+        <!-- Citazione -->
+        <section class="quote-section">
+            <p class="quote-text">Nel nome della Luna, ti punirò!</p>
+        </section>
+
+        <!-- Storia -->
+        <section class="content-section">
+            <div class="section-inner">
+                <h2>La Storia di Usagi</h2>
+                <p>
+                    Usagi Tsukino è una ragazza di 14 anni apparentemente normale: ama mangiare, dormire e odia 
+                    studiare. La sua vita cambia radicalmente quando incontra Luna, una gatta nera parlante con 
+                    una mezzaluna sulla fronte, che le dona un medaglione magico e le rivela il suo destino: 
+                    è Sailor Moon, la guerriera scelta per proteggere la Terra.
+                </p>
+                <p>
+                    Inizialmente Usagi è riluttante e insicura, piange facilmente e non si sente all'altezza del 
+                    compito. Ma quando vede qualcuno in difficoltà, il suo cuore gentile e il suo senso di giustizia 
+                    prendono il sopravvento. Con il grido "Moon Prism Power, Make Up!" si trasforma in Sailor Moon, 
+                    acquisendo forza, agilità e poteri magici straordinari.
+                </p>
+                <p>
+                    La sua missione la porta a scoprire la sua vera identità: è la reincarnazione della Principessa 
+                    Serenity del Regno della Luna, destinata a proteggere il Cristallo d'Argento, un artefatto di 
+                    immenso potere. Il suo amore per Mamoru Chiba (Tuxedo Mask) è eterno, risalente alla vita passata 
+                    quando era la Principessa Serenity e lui il Principe Endymion.
+                </p>
+            </div>
+        </section>
+
+        <div class="decorative-symbols">🌙 ✨ 💖</div>
+
+        <!-- Caratteristiche -->
+        <section class="content-section">
+            <div class="section-inner">
+                <h2>Le Qualità di Sailor Moon</h2>
+                <div class="info-grid">
+                    <div class="info-box">
+                        <h3>💖 Cuore Gentile</h3>
+                        <p>La sua compassione infinita è la sua forza più grande. Crede nel bene anche nei nemici e offre sempre una seconda possibilità.</p>
+                    </div>
+                    <div class="info-box">
+                        <h3>✨ Potere del Cristallo</h3>
+                        <p>Il leggendario Cristallo d'Argento risponde al suo cuore puro, donandole poteri che possono guarire o distruggere.</p>
+                    </div>
+                    <div class="info-box">
+                        <h3>👑 Leader Naturale</h3>
+                        <p>Nonostante l'insicurezza iniziale, diventa la guida delle Sailor Senshi, ispirando le sue compagne con coraggio e determinazione.</p>
+                    </div>
+                    <div class="info-box">
+                        <h3>🌟 Amore Eterno</h3>
+                        <p>Il suo amore per Mamoru attraversa tempo e spazio, una forza così potente da superare la morte stessa.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Timeline -->
+        <section class="timeline-section">
+            <div class="timeline-inner">
+                <h3>I Momenti Chiave della sua Vita</h3>
+                <ul>
+                    <li>Incontra Luna e diventa Sailor Moon per la prima volta</li>
+                    <li>Si unisce alle altre Sailor Senshi: Mercury, Mars, Jupiter e Venus</li>
+                    <li>Scopre che Tuxedo Mask è Mamoru Chiba, il ragazzo di cui è innamorata</li>
+                    <li>Si rivela essere la Principessa Serenity del Regno della Luna</li>
+                    <li>Il Cristallo d'Argento si manifesta dal suo corpo</li>
+                    <li>Sconfigge Queen Beryl e il Dark Kingdom</li>
+                    <li>Conosce Chibiusa, sua figlia dal futuro</li>
+                    <li>Diventa Neo Queen Serenity nel XXX secolo</li>
+                </ul>
+            </div>
+        </section>
+
+        <div class="decorative-symbols">🌙 💫 ⭐</div>
+
+        <!-- Poteri -->
+        <section class="content-section">
+            <div class="section-inner">
+                <h2>Poteri e Attacchi Speciali</h2>
+                <p>
+                    Come Sailor Moon, Usagi ha accesso a numerosi attacchi magici che si evolvono durante la serie. 
+                    Il suo attacco iniziale, "Moon Tiara Action", lancia il suo diadema come un disco d'energia. 
+                    Con il tempo sviluppa tecniche sempre più potenti come "Moon Princess Halation" e la devastante 
+                    "Moon Spiral Heart Attack".
+                </p>
+                <p>
+                    Il Cristallo d'Argento è la fonte del suo potere supremo. Quando attivato dal suo amore e dalla 
+                    sua volontà di proteggere, può purificare qualsiasi male, guarire ferite mortali e persino 
+                    resuscitare i morti. Tuttavia, usarlo richiede un'enorme energia vitale e può mettere in pericolo 
+                    la vita di Usagi stessa.
+                </p>
+                <p>
+                    Nelle sue incarnazioni più potenti - Super Sailor Moon, Eternal Sailor Moon e infine Sailor Cosmos - 
+                    i suoi poteri raggiungono livelli divini, capaci di affrontare minacce cosmiche e proteggere 
+                    non solo la Terra, ma l'intero universo.
+                </p>
+            </div>
+        </section>
+
+        <!-- Messaggio finale -->
+        <section class="content-section">
+            <div class="section-inner">
+                <h2>Una Guerriera per Sempre</h2>
+                <p>
+                    Usagi ci insegna che non bisogna essere perfetti per essere eroi. La sua forza non deriva 
+                    dall'assenza di paura o di debolezze, ma dalla capacità di rialzarsi ogni volta, di credere 
+                    nell'amore e nell'amicizia anche quando tutto sembra perduto. Lei piange, ha paura, commette 
+                    errori - ma non si arrende mai.
+                </p>
+                <p>
+                    Come Sailor Moon protegge la Terra con il potere dell'amore, così voglio proteggere il nostro 
+                    legame con la stessa dedizione. La sua storia ci ricorda che l'amore vero è la forza più 
+                    potente dell'universo, capace di superare qualsiasi ostacolo e illuminare anche le tenebre 
+                    più profonde.
+                </p>
+            </div>
+        </section>
+
+    </div>
+
+    <!-- Footer -->
+    <footer>
+        <p>🌙 Sailor Moon - La Guerriera dell'Amore e della Giustizia ✨</p>
+        <p style="margin-top: 0.5rem; font-size: 1rem;">Nel nome della Luna! 💖</p>
+    </footer>
+
+    <script>
+        // Crea stelle animate
+        function createStars() {
+            const starsContainer = document.getElementById('stars');
+            for (let i = 0; i < 100; i++) {
+                const star = document.createElement('div');
+                star.className = 'star';
+                const size = Math.random() * 3 + 1;
+                star.style.width = size + 'px';
+                star.style.height = size + 'px';
+                star.style.left = Math.random() * 100 + '%';
+                star.style.top = Math.random() * 100 + '%';
+                star.style.animationDelay = Math.random() * 3 + 's';
+                star.style.animationDuration = (Math.random() * 2 + 2) + 's';
+                starsContainer.appendChild(star);
+            }
+        }
+
+        // Inizializza
+        createStars();
+    </script>
+</body>
+</html>
